fix(component): Fix modal jumping, improve glacier class name, remove unnecessary divs

--- a/src/components/common/modal/modal.module.css
+++ b/src/components/common/modal/modal.module.css
@@ -1,9 +1,16 @@
-.overlay,
-.modal {
+.modalWrapper {
   position: fixed;
   z-index: 100;
-
   pointer-events: none;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.overlay,
+.modal {
+  position: absolute;
   opacity: 0;
 }
 
