--- a/src/containers/glacier/app/main/main.module.css
+++ b/src/containers/glacier/app/main/main.module.css
@@ -1,4 +1,4 @@
-.browser {
+.glacierMain {
   position: relative;
   display: flex;
   flex-direction: column;
